// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clicking the left and right button inside the header should call the right handler 1`] = `
<div>
  <div
    class="header"
  >
    <button
      class="button left"
    >
      <span
        aria-label="plus"
        class="fa fa-plus"
      />
    </button>
    <div
      class="label"
    >
      I have handler
    </div>
    <button
      class="button right"
    >
      <span
        aria-label="gear"
        class="fa fa-gear"
      />
    </button>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            aria-label="ellipsis-v"
            class="fa fa-ellipsis-v"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            aria-label="ellipsis-v"
            class="fa fa-ellipsis-v"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            aria-label="ellipsis-v"
            class="fa fa-ellipsis-v"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render an MultiItemSelection with children 1`] = `
<div>
  <div
    class="header"
  >
    <div
      class="label"
    >
      I have children
    </div>
  </div>
  <ul
    class="list"
  >
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            aria-label="ellipsis-v"
            class="fa fa-ellipsis-v"
          />
          <span
            class="index"
          >
            1
          </span>
        </span>
        <div
          class="content"
        >
          Child 1
        </div>
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            aria-label="ellipsis-v"
            class="fa fa-ellipsis-v"
          />
          <span
            class="index"
          >
            2
          </span>
        </span>
        <div
          class="content"
        >
          Child 2
        </div>
      </div>
    </li>
    <li
      class="listElement"
    >
      <div
        class="item"
      >
        <span
          class="dragHandle"
        >
          <span
            aria-label="ellipsis-v"
            class="fa fa-ellipsis-v"
          />
          <span
            class="index"
          >
            3
          </span>
        </span>
        <div
          class="content"
        >
          Child 3
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Render an empty MultiItemSelection 1`] = `
<div>
  <div
    class="header emptyList"
  >
    <div
      class="label"
    >
      I am empty
    </div>
  </div>
  <ul
    class="list"
  />
</div>
`;
